fixed dropdown overflow issue

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -183,6 +183,10 @@ body.atbd_content_active #directorist.atbd_wrapper {
   float: none;
 }
 
+#directorist.atbd_wrapper .dropdown-menu {
+  z-index: 10000;
+}
+
 .atbdp_preload * {
   -webkit-transition: none !important;
   -moz-transition: none !important;
